# obs-client

./: .onedev-buildspec.yml  Cargo.toml  README.md
src/: main.rs
